// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableCell Style tests should render with condensed styles 1`] = `
.circuit-0 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
  padding: 12px 16px;
  font-size: 13px;
  line-height: 20px;
}

<td
  class="circuit-0 circuit-1"
  data-testid="table-cell"
>
  Foo
</td>
`;

exports[`TableCell Style tests should render with default styles 1`] = `
.circuit-0 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
}

<td
  class="circuit-0 circuit-1"
  data-testid="table-cell"
>
  Foo
</td>
`;

exports[`TableCell Style tests should render with header styles 1`] = `
.circuit-0 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
}

<td
  class="circuit-0 circuit-1"
  data-testid="table-cell"
>
  Foo
</td>
`;

exports[`TableCell Style tests should render with isHovered styles 1`] = `
.circuit-0 {
  background-color: #FFF;
  border-bottom: 1px solid #CCC;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
  background-color: #F5F5F5;
}

<td
  class="circuit-0 circuit-1"
  data-testid="table-cell"
>
  Foo
</td>
`;
